# better-flow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
better_flow_core/: CMakeLists.txt  bf_bag_viewer
better_flow_core/ext/: CMakeLists.txt
better_flow_core/include/better_flow/: accel_lib.h  clustering.h  common.h  datastructures.h  dvs_flow.h  event.h  event_file.h  object_model.h  opencl_driver.h  optimizer_global.h  optimizer_rolling.h  optimizer_sampler.h
better_flow_core/src/: bf_bag_viewer.cpp  bf_motion_compensator.cpp  bf_viewer.cpp  clustering.cpp  event_file.cpp  gpu_impl.cl  object_model.cpp  opencl_driver.cpp  optimizer_global.cpp  optimizer_rolling.cpp  optimizer_sampler.cpp
launch/: better_proc_visualizer.launch  better_visualizer.launch  better_visualizer.rviz  left.launch  middle.launch  right.launch
ros_nodes_src/: bf_visualizer.cpp
